--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ejjy-global",
   "private": true,
-  "version": "0.0.10",
-  "main": "dist/myTypes.js",
-  "types": "dist/myTypes.d.ts",
+  "version": "0.0.11",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
