--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ejjy-global",
   "private": true,
-  "version": "0.0.12",
+  "version": "0.0.13",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -13,10 +13,14 @@
     "publish": "npm version patch --no-git-tag-version && git push"
   },
   "dependencies": {
+    "antd": "^4.24.13",
+    "dayjs": "^1.11.9",
+    "lodash": "^4.17.21",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.197",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -26,8 +30,8 @@
     "eslint-plugin-react-hooks": "^4",
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.6",
     "sass": "^1.49.9",
+    "typescript": "^4.1.6",
     "vite": "^4.4.5"
   }
 }
