--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*.ts*", "src/constants/index.ts"],
+  "include": ["src/**/*.ts*"],
   "exclude": ["node_modules"]
 }
