--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
-    "target": "ES2017",
+    "target": "ES2016",
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
@@ -9,5 +9,5 @@
     "esModuleInterop": true
   },
   "include": ["src/**/*.ts*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
