--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "ejjy-global",
-  "private": true,
-  "version": "0.0.29",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "tsc": "tsc",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "publish": "npm version patch --no-git-tag-version && git push"
-  },
-  "dependencies": {
-    "antd": "^4.24.13",
-    "axios": "^0.20.0",
-    "dayjs": "^1.11.9",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-query": "^3.34.15"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.197",
-    "@types/node": "^20.5.9",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^7.15.0",
-    "eslint-plugin-react-hooks": "^4",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "prettier": "^2.2.1",
-    "sass": "^1.49.9",
-    "typescript": "^4.1.6",
-    "vite": "^4.4.5"
-  }
+	"name": "ejjy-global",
+	"private": true,
+	"version": "0.0.29",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"tsc": "tsc -w",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+		"preview": "vite preview",
+		"publish": "npm version patch --no-git-tag-version && git push"
+	},
+	"dependencies": {
+		"antd": "^4.24.13",
+		"axios": "^0.20.0",
+		"dayjs": "^1.11.9",
+		"lodash": "^4.17.21",
+		"moment": "^2.29.4",
+		"react": "^16.14.0",
+		"react-dom": "^16.13.1",
+		"react-query": "^3.34.15"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.14.197",
+		"@types/node": "^20.5.9",
+		"@types/react": "^16.9.49",
+		"@types/react-dom": "^16.9.8",
+		"@typescript-eslint/eslint-plugin": "^5.30.6",
+		"@typescript-eslint/parser": "^5.0.0",
+		"@vitejs/plugin-react": "^4.0.3",
+		"eslint": "^7.15.0",
+		"eslint-plugin-react-hooks": "^4",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"prettier": "^2.2.1",
+		"sass": "^1.49.9",
+		"typescript": "^4.1.6",
+		"vite": "^4.4.5"
+	}
 }
