--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.57",
+	"version": "0.0.58",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -17,6 +17,7 @@
 		"antd": "^4.24.13",
 		"axios": "^0.20.0",
 		"dayjs": "^1.11.9",
+		"jspdf": "^2.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
 		"qz-tray": "^2.2.2",
