--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.63",
+	"version": "0.0.64",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -10,6 +10,7 @@
 		"tsc": "tsc -w",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+		"prettify": "prettier --write ./src",
 		"preview": "vite preview",
 		"pre-commit": "npm version patch --no-git-tag-version && git add .",
 		"post-commit": "git push && cd ../ejjy-app-cashiering && npm run ug"
