--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.64",
+	"version": "0.0.65",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build",
-		"tsc": "tsc -w",
+		"build": "vite build && tsc",
+		"preview": "vite preview",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
 		"prettify": "prettier --write ./src",
-		"preview": "vite preview",
-		"pre-commit": "npm version patch --no-git-tag-version && git add .",
+		"tsc": "tsc -w",
+		"tw": "npx tailwindcss -i src/index.css -o ./dist/styles.min.css --minify",
+		"pre-commit": "npm version patch --no-git-tag-version && npm run tw && git add .",
 		"post-commit": "git push && cd ../ejjy-app-cashiering && npm run ug"
 	},
 	"dependencies": {
@@ -36,11 +37,14 @@
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.0.0",
 		"@vitejs/plugin-react": "^4.0.3",
+		"autoprefixer": "^10.4.15",
 		"eslint": "^7.15.0",
 		"eslint-plugin-react-hooks": "^4",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"postcss": "^8.4.29",
 		"prettier": "^2.2.1",
 		"sass": "^1.49.9",
+		"tailwindcss": "^3.3.3",
 		"typescript": "^4.1.6",
 		"vite": "^4.4.5"
 	}
