--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.78",
+	"version": "0.0.79",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -23,17 +23,21 @@
 		"jspdf": "^2.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
+		"query-string": "^7.1.3",
 		"qz-tray": "^2.2.2",
 		"react": "^16.14.0",
 		"react-dom": "^16.13.1",
 		"react-query": "^3.34.15",
-		"type-fest": "^4.3.1"
+		"react-router-dom": "^5.3.4",
+		"type-fest": "^4.3.1",
+		"use-debounce": "^7.0.1"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.197",
 		"@types/node": "^20.5.9",
 		"@types/react": "^16.9.49",
 		"@types/react-dom": "^16.9.8",
+		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.0.0",
 		"@vitejs/plugin-react": "^4.0.3",
