--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.118",
+	"version": "0.0.119",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -16,20 +16,18 @@
 		"pre-commit": "npm version patch --no-git-tag-version && npm run tw && git add .",
 		"post-commit": "git push && concurrently \"cd ../ejjy-app-cashiering && npm update ejjy-global\" \"cd ../ejjy-app && npm update ejjy-global\""
 	},
-	"dependencies": {
+	"peerDependencies": {
+		"react": "^16.14.0",
 		"antd": "^4.24.13",
 		"axios": "^0.20.0",
 		"dayjs": "^1.11.9",
-		"jspdf": "^2.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
 		"query-string": "^7.1.3",
-		"qz-tray": "^2.2.2",
-		"react": "^16.14.0",
-		"react-dom": "^16.13.1",
-		"react-query": "^3.34.15",
-		"react-router-dom": "^5.3.4",
-		"type-fest": "^4.3.1",
+		"qz-tray": "^2.2.2"
+	},
+	"dependencies": {
+		"jspdf": "^2.5.1",
 		"use-debounce": "^7.0.1"
 	},
 	"devDependencies": {
@@ -51,6 +49,11 @@
 		"sass": "^1.49.9",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^4.1.6",
-		"vite": "^4.4.5"
+		"vite": "^4.4.5",
+		"react": "^16.14.0",
+		"react-dom": "^16.13.1",
+		"react-query": "^3.34.15",
+		"react-router-dom": "^5.3.4",
+		"type-fest": "^4.3.1"
 	}
 }
