update peer dependecy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 		"outDir": "./dist",
 		"strict": true,
 		"esModuleInterop": true,
-		"jsx": "react"
+		"jsx": "react",
+		"skipLibCheck": true
 	},
 	"include": ["src/**/*.ts*"],
 	"exclude": ["node_modules", "dist"]
