--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.124",
+	"version": "0.0.125",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -14,11 +14,12 @@
 		"tsc": "tsc -w",
 		"tw": "npx tailwindcss -i src/index.css -o ./dist/styles.min.css --minify",
 		"pre-commit": "npm version patch --no-git-tag-version && npm run tw && git add .",
-		"post-commit": "git push"
+		"post-commit": "git push && concurrently \"cd ../ejjy-app-cashiering && npm update ejjy-global\" \"cd ../ejjy-app && npm update ejjy-global\""
 	},
 	"peerDependencies": {
 		"react": "^16.13.1",
-		"react-router-dom": "^5.3.4"
+		"react-router-dom": "^5.2.0",
+		"react-dom": "^16.13.1"
 	},
 	"dependencies": {
 		"jspdf": "^2.5.1",
@@ -51,7 +52,6 @@
 		"tailwindcss": "^3.3.3",
 		"typescript": "^4.1.6",
 		"vite": "^4.4.5",
-		"react-dom": "^16.13.1",
 		"react-query": "^3.34.15",
 		"type-fest": "^4.3.1"
 	}
