--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.127",
+	"version": "0.0.128",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -18,19 +18,20 @@
 	},
 	"peerDependencies": {
 		"react": "^16.13.1",
-		"react-router-dom": "^5.2.0",
-		"react-dom": "^16.13.1"
+		"react-dom": "^16.13.1",
+		"react-router-dom": "^5.2.0"
 	},
 	"dependencies": {
-		"jspdf": "^2.5.1",
-		"use-debounce": "^7.0.1",
 		"antd": "^4.24.8",
 		"axios": "^0.20.0",
 		"dayjs": "^1.11.9",
+		"jspdf": "^2.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
 		"query-string": "^7.1.3",
-		"qz-tray": "^2.2.2"
+		"qz-tray": "^2.2.2",
+		"type-fest": "^4.3.1",
+		"use-debounce": "^7.0.1"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.197",
@@ -48,11 +49,10 @@
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"postcss": "^8.4.29",
 		"prettier": "^2.2.1",
+		"react-query": "^3.34.15",
 		"sass": "^1.49.9",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^4.1.6",
-		"vite": "^4.4.5",
-		"react-query": "^3.34.15",
-		"type-fest": "^4.3.1"
+		"vite": "^4.4.5"
 	}
 }
