--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.133",
+	"version": "0.0.134",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -24,14 +24,12 @@
 	"dependencies": {
 		"antd": "^4.24.8",
 		"axios": "^0.20.0",
-		"clsx": "^2.1.0",
 		"dayjs": "^1.11.9",
 		"jspdf": "^2.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
 		"query-string": "^7.1.3",
 		"qz-tray": "^2.2.2",
-		"tailwind-merge": "^2.2.1",
 		"type-fest": "^4.3.1",
 		"use-debounce": "^7.0.1"
 	},
@@ -55,6 +53,8 @@
 		"sass": "^1.49.9",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^4.1.6",
-		"vite": "^4.4.5"
+		"vite": "^4.4.5",
+		"clsx": "^2.1.0",
+		"tailwind-merge": "^2.2.1"
 	}
 }
