--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.134",
+	"version": "0.0.135",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -31,7 +31,9 @@
 		"query-string": "^7.1.3",
 		"qz-tray": "^2.2.2",
 		"type-fest": "^4.3.1",
-		"use-debounce": "^7.0.1"
+		"use-debounce": "^7.0.1",
+		"clsx": "^2.1.0",
+		"tailwind-merge": "^2.2.1"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.197",
@@ -53,8 +55,6 @@
 		"sass": "^1.49.9",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^4.1.6",
-		"vite": "^4.4.5",
-		"clsx": "^2.1.0",
-		"tailwind-merge": "^2.2.1"
+		"vite": "^4.4.5"
 	}
 }
