--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
 		"strict": true,
 		"esModuleInterop": true,
 		"jsx": "react",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"baseUrl": "src"
 	},
-	"include": ["src/**/*.ts*"],
+	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
 }
