--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
 		"strict": true,
 		"esModuleInterop": true,
 		"jsx": "react",
-		"skipLibCheck": true,
-		"baseUrl": "src"
+		"skipLibCheck": true
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
