--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.183",
+	"version": "0.0.184",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -25,14 +25,14 @@
 		"antd": "^4.24.8",
 		"axios": "^0.20.0",
 		"dayjs": "^1.11.9",
+		"formik": "2.2.6",
 		"jspdf": "^2.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
 		"query-string": "^7.1.3",
 		"qz-tray": "^2.2.2",
 		"type-fest": "^4.3.1",
-		"use-debounce": "^7.0.1",
-		"formik": "2.2.6"
+		"use-debounce": "^7.0.1"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.197",
@@ -49,7 +49,8 @@
 		"eslint-plugin-react-hooks": "^4",
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"postcss": "^8.4.29",
-		"prettier": "^2.2.1",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.12",
 		"react-query": "^3.34.15",
 		"sass": "^1.49.9",
 		"tailwindcss": "^3.3.3",
