--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ejjy-global",
 	"private": true,
-	"version": "0.0.448",
+	"version": "0.0.450",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -17,7 +17,7 @@
 		"update:cashier": "cd ../ejjy-app-cashiering && npm update ejjy-global",
 		"update:scale": "cd ../ejjy-app && npm update ejjy-global",
 		"pre-commit": "npm version patch --no-git-tag-version && npm run tw && git add .",
-		"post-commit": "git push && concurrently \"npm run update:cashier\"npm run update:app\""
+		"post-commit": "git push && concurrently \"npm run update:cashier\""
 	},
 	"peerDependencies": {
 		"react": "^16.13.1",
